<resources>
    <string name="app_name">Escalade</string>
    <string name="nom">Votre nom</string>
    <string name="login">Login</string>
    <string name="entrer_login">Nom d\'utilisateur</string>
    <string name="mdp">Mot de passe</string>
    <string name="mdp_confirmation">Confirmer mdp</string>
    <string name="sauvegarde_infos">Sauvegarder les informations</string>
    <string name="connexion">Connexion</string>
    <string name="inscrire">S\'inscrire</string>
    <string name="Inscription">Inscription</string>
    <string name="lblinscr">Inscription</string>
    <string name="nameInsc">Name</string>
    <string name="MotDePasseInsc">Mot de passe</string>
    <string name="ConfirmationMDP">Confirmation</string>
    <string name="Courriel">Courriel</string>
    <string name="Tel">Telephone</string>
    <string name="Continuer">Continuer</string>
    <string name="Annuler">Annuler</string>
    <string name="Nom">Nom</string>
    <string name="Prenom">Prenom</string>
    <string name="NoCiv">No civ</string>
    <string name="Rue">Rue</string>
    <string name="Ville">Ville</string>
    <string name="CodePostal">Code postal</string>
    <string name="btnIsncr">Terminer</string>
    <string name="modProfil">Modifier le profil</string>
    <string name="modAdresse">Modifier adresse</string>
    <string name="Decon">Deconnexion</string>
    <string name="save">Sauvegarder</string>
    <string name="nomPiste">Nom de la piste</string>
    <string name="piste_desc">Courte description de la piste.</string>
    <string name="confirmer">Confirmer</string>
    <string name="ajouter">Ajouter</string>
    <string name="type_piste">Type de la piste:</string>
    <string name="difficulte_piste">Difficulte de la piste:</string>
    <string name="ajouter_piste">Ajouter une piste</string>
    <string name="ajouterImage">Ajouter image</string>
    <string name="commentaires">Commentaires</string>
    <string name="block">Bloc</string>
    <string name="voie">Voie</string>
    <string name="nom_app">Escalade Haut</string>
    <string name="titre_nouvelles">Nouvelles</string>
    <string name="titre_notifications">Notifications</string>
    <string name="titre_profil">Profil</string>
    <string name="titre_classements">Classements</string>
    <string name="titre_pistes">Liste des Pistes</string>
    <string name="titre_ajouter_piste">Ajouter une Piste</string>
    <string name="titre_preferences">Preferences</string>
    <string name="titre_demandes">Invitations</string>
    <string name="titre_mod_profil">Modification Profil</string>
    <string name="txt_bloc">Bloc</string>
    <string name="txt_voie">Voie</string>
    <string name="txt_nom_notification">Notification</string>
    <string name="txt_desc_notification">Description de la notification haha peut-etre ce texte sera trop long, mais cest effectivement le but de la choses voir comment les choses se placent dans la vie.</string>

    <string-array name="tabs">
        <item>Bloc</item>
        <item>Voie</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_nouvelles">Nouvelles</string>
    <string name="membre">Jean-Dujardins</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="youGotIt">You got it bro??!! :D</string>
    <string name="aVue">À vue</string>
    <string name="apTravail">Après travail</string>
    <string name="flash">Flash</string>
    <string name="diffeprouv">Difficulté éprouvée :</string>
    <string name="vilainOuvreur">Vilain ouvreur? Votez!</string>
    <string name="txtInviterMembre">Inviter Membre</string>
    <string name="txtStatus">Ouvreur</string>
    <string name="txtNoTelephone">555-123-4567</string>
    <string name="txtEmail">uneadresse@gmail.com</string>
    <string name="txtAdresse">1010 Avenue Chelier</string>
    <string name="txtImgAdresse">Icon Adresse</string>
    <string name="txtIconMail">Icon Mail</string>
    <string name="txtIconNoTelephone">Icon No Telephone</string>
    <string name="txtIconStatus">Icon Status</string>
    <string name="txtNomMembre">Renaud-Charles Pelletier</string>
    <string name="newLogin">Nouveau login</string>
    <string name="confirmationLogin">Confirmer login</string>
    <string name="txtTitreNouvelle">Titre Nouvelle</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_maps">Map</string>
    <string name="accepter">Accepter</string>
</resources>
