<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nomPiste"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voie"
        android:id="@+id/chkVoie"
        android:checked="false"
        android:layout_below="@+id/editText2"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_toStartOf="@+id/editText2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/block"
        android:id="@+id/chkBlock"
        android:layout_below="@+id/chkVoie"
        android:layout_alignLeft="@+id/chkVoie"
        android:layout_alignStart="@+id/chkVoie"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouterImage"
        android:id="@+id/btnAddPic"
        android:layout_below="@+id/spinner"
        android:layout_toRightOf="@+id/btnsavemodpiste"
        android:layout_toEndOf="@+id/btnsavemodpiste" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnsavemodpiste"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:onClick="onClick" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnsavemodpiste"
        android:layout_toLeftOf="@+id/btnAddPic"
        android:layout_toStartOf="@+id/btnAddPic"
        android:layout_below="@+id/spinner" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/chkBlock"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>