<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView6" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ajouter_piste"
                android:id="@+id/txtAjouterPiste"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNomPiste"
                android:layout_gravity="center_horizontal"
                android:hint="@string/nomPiste"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/type_piste"
                android:id="@+id/txtTypePiste"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerType"
                android:layout_below="@+id/spinnerDiff"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/difficulte_piste"
                android:id="@+id/txtDifficulte"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerDiff"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/txtDescription"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.33"
                android:hint="@string/piste_desc"
                android:layout_margin="2dp"
                android:elegantTextHeight="false"
                android:editable="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmer"
                android:id="@+id/btnAjouterPiste"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>